2008-09-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stanza.erl, src/core/exmpp_iq.erl,
	src/core/exmpp_presence.erl: Typo in modules short description.

	* src/core/exmpp_presence.erl: In documentation, use "presence stanza"
	instead of "<presence/>".
	(error): Rewrite to behave like exmpp_iq:error/2.
	(set_show, set_status, set_priority): Always use
	exmpp_xml:append_child/2 so the caller better controls the order of
	the elements.

2008-09-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Add functions set_attribute_in_list/2 and
	set_attribute/2. They work like set_attribute_in_list/{3,4} and
	set_attribute/{3,4} respectively but take an xmlattribute() or an
	xmlnsattribute() in argument. Add a clause to set_attributes/2 to also
	accept xmlattribute() or xmlnsattribute() arguments.

2008-08-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: New function remove_whitespaces_deeply/1 to
	operate on the entire XML tree, not only the current node (as
	remove_whitespaces/1).

2008-08-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl (set_status/1): Accept an empty string
	or an empty binary as the status. In this case, the status element is
	removed.

	* src/core/exmpp_jid.erl (make_jid/3): Accept an empty string as the
	resource, to ease integration with Ejabberd.

	* configure.ac: Rewrite again the way Erlang and its components are
	detected. It's now possible to use --with-erlang to indicate an
	alternate Erlang environment; much easier than filling ERL and ERLC
	variables (EJABP-3). Regarding cross-compilation, --with-erl_interface
	was replaced by --with-host-erlang. This new option should point to
	the Erlang environment used by the future host. The configure script
	will use the ERTS and erl_interface found there. Checks for the need
	of any workarounds will also use the host Erlang. While here, fix a